Code cleanup: remove comments, add Dockerfiles, and include frontend